src/test/deca/syntax/valid/SansObjet/DeclVarSet_NoType.deca
// Description:
//    Variable assignment without prior declaration; not detected by parser.
//
// Results:
//    (void)
//
// Historique:
//    cree le 07/01/2022

{
        x = 3;
}
